[package]
name = "omnihook"
version = "0.1.0"
edition = "2024"
description = "Generic webhook client with HMAC signing and platform-specific payload builders (Slack, Discord, Telegram)"

[dependencies]
hex = "0.4.3"
hmac = "0.13.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
mockito = "1.7.2"
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread"] }
